<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview_dialog_akku"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearlayout_dialog_battery_optimization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/linearlayout_dialog_battery_optimization_padding"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_dialog_battery_optimization_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/textview_dialog_battery_optimization_title_margin_top"
            android:padding="@dimen/textview_dialog_battery_optimization_title_padding"
            android:textStyle="bold"
            android:text="@string/label_dialog_battery_optimization_title" />

        <TextView
            android:id="@+id/textview_dialog_battery_optimization_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/textview_dialog_battery_optimization_info_padding"
            android:textStyle="normal"
            android:textSize="@dimen/textview_dialog_battery_optimization_info_text_size"
            android:text="" />

        <TextView
            android:id="@+id/textview_dialog_battery_optimization_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="@dimen/textview_dialog_battery_optimization_link_padding"
            android:textStyle="normal"
            android:textSize="@dimen/textview_dialog_battery_optimization_link_text_size"
            android:clickable="true"
            android:focusable="true"
            android:text="" />

        <ImageView
            android:id="@+id/imageview_dialog_battery_optimization_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/imageview_dialog_battery_optimization_ok_padding_top"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/label_dialog_battery_optimization_ok"
            app:srcCompat="@drawable/icon_ok_selector" />
    </LinearLayout>
</ScrollView>